--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 	],
 	"game": [
 		"bin-debug/commont/BaseUI.js",
-		"bin-debug/game/PKResultUI.js",
+		"bin-debug/game/PKItem2.js",
 		"bin-debug/MainLoadingUI.js",
 		"bin-debug/MsgingUI.js",
 		"bin-debug/ThemeAdapter.js",
@@ -29,13 +29,16 @@
 		"bin-debug/commont/ui/DebugUI.js",
 		"bin-debug/commont/ui/TipsUI.js",
 		"bin-debug/commont/ui/UserInfoBtn.js",
+		"bin-debug/game/ADShowUI.js",
+		"bin-debug/game/ChangeJumpUI.js",
 		"bin-debug/game/ChangeUserItem.js",
 		"bin-debug/game/GameUI.js",
 		"bin-debug/game/PKItem.js",
-		"bin-debug/game/PKItem2.js",
 		"bin-debug/Main.js",
+		"bin-debug/game/PKResultUI.js",
 		"bin-debug/game/PKUI.js",
 		"bin-debug/game/PlayManager.js",
+		"bin-debug/game/RebornUI.js",
 		"bin-debug/game/rank/RankUI.js",
 		"bin-debug/manager/CacheManager.js",
 		"bin-debug/manager/DebugManager.js",
